--- a/Englix-and-chill/package.json
+++ b/Englix-and-chill/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "npx prettier --write \"src/**/*.{js,jsx}\""
   },
   "keywords": [],
-  "author": "Daniel Vu",
-  "license": "ISC"
+  "author": "Daniel",
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "2.7.1"
+  }
 }
