--- a/Englix-and-chill/package.json
+++ b/Englix-and-chill/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "npx prettier --write \"src/**/*.{js,jsx}\""
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --quiet --fix"
   },
   "keywords": [],
   "author": "Daniel",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "2.7.1"
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1"
   }
 }
